<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/textViewRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="#0023E4"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/editTextEmailRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPasswordRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"

        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/editTextHowOld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/how_old_are_you"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0023E4"
        android:text="@string/sign_up" />

</LinearLayout>