<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_em"
        android:textAlignment="center"
        android:textColor="#0023E4"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/editTextEmailRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0023E4"
        android:layout_marginTop="8dp"
        android:text="@string/reset_password" />

</LinearLayout>